environments/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    cloudflare-tunnel-ingress-controller.strrl.dev/backend-protocol: "https"
    cloudflare-tunnel-ingress-controller.strrl.dev/proxy-ssl-verify: "off"
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # cert-manager.io/cluster-issuer: "letsencrypt-dev"
    # external-dns.alpha.kubernetes.io/target: "51.89.191.218"
    # external-dns.alpha.kubernetes.io/enabled: "true"
    # external-dns.alpha.kubernetes.io/ttl: "300"
    # external-dns.alpha.kubernetes.io/ingress-hostname-source: "annotation-only"



spec:
  ingressClassName: cloudflare-tunnel
  rules:
  - host: argocd-dev.786999.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-dev-server
            port:
              number: 443
  tls:
    - hosts:
      - testing.dev.786999.xyz
  #     secretName: test-tls-lets
